--- a/style/main.css
+++ b/style/main.css
@@ -1,6 +1,10 @@
-body {
+* {
     font-family: 'Raleway', sans-serif;
     color: #333;
+}
+
+::selection{
+    background-color: #f9d7ed;
 }
 
 a{
@@ -8,7 +12,7 @@ a{
     transition: all 0.6 ease;
 }
 
-a:visited, a:active{
+a:visited, a:active, a:link{
     color: #000;
     
 }
@@ -107,7 +111,11 @@ header__link{
     display: none;
 }
 
-@media (max-width: 767px){
+@media (max-width: 1023px){
+    
+    .header__logo h3{
+        font-size: 1em;
+    }
     
     body.lock{
         overflow: hidden;
@@ -175,10 +183,11 @@ header__link{
         width: 100%;
         height: 100%;
         overflow-y: scroll;
-        background-color: rgba(0, 0, 0, .7);
+        background-color: rgba(0, 0, 0, .8);
         padding: 70px 10px 20px 10px;
         text-align: center;
         transition: all 0.5s ease;
+        text-shadow: 1px 1px 1px #000;
     }
     
     .header__menu.active{
@@ -187,6 +196,7 @@ header__link{
     
     .header__menu_list{
         display: block;
+        margin-left: -30px;
     }
     .header__menu_item{
         margin: 20px 0px 50px 0px;
@@ -225,6 +235,8 @@ header__link{
     
 }
 
+
+
 .mainscreen {
     position: relative;
     width: 100%;
@@ -247,6 +259,8 @@ header__link{
     font-size: 2em;
 }
 
+
+
 @media (max-width: 767px){
     .mainscreen h1{
         font-size: 2em;
@@ -256,5 +270,335 @@ header__link{
     .mainscreen h2{
         font-size: 1.5em;
         
+    }
+}
+
+
+.content{
+    padding-bottom: 30px;
+}
+
+
+.content_description{
+    margin: 0 auto 100px auto;
+    text-align: center;
+    font-variant: small-caps;
+    line-height: .9em;
+    padding-top: 50px;
+}
+
+.content_description h2{
+    font-size: 3em;
+    letter-spacing: .1em;
+}
+
+.content_description h3{
+    font-size: 1.5em;
+    letter-spacing: .1em;
+    position: relative
+}
+
+.content_description h3:after{
+    content: '';
+    position: absolute;
+    width: 150px;
+    height: 1px;
+    display: block;
+    left: 50%;
+    margin: 30px 0 30px -75px;
+    background-color: #000;
+    
+}
+
+.about{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.about>div{
+    flex: 1;
+}
+
+.about h3{
+    text-align: center;
+    margin-bottom: 30px;
+    font-variant: small-caps;
+    font-size: 1.5em;
+    letter-spacing: .09em;
+}
+
+.colored{
+    color: #1ebee6;
+}
+
+.about img{
+    display: block;
+    width: 300px;
+    border-radius: 50%;
+    margin: 0 auto;
+}
+
+.about ul{
+    text-align: center;
+    list-style: none;
+    margin-left: -30px;
+}
+
+
+.about li a, .about li i{
+    color: #30b6c5;
+}
+
+@media (max-width: 767px){
+    .about{
+        flex-direction: column;
+    }
+    
+    .about img{
+        margin-bottom: 30px;
+    }
+    
+
+}
+
+
+.blue{
+    background-color: #dff3fb;
+}
+
+.about_work ul{
+    height: 100%;
+    margin-bottom: 0;
+}
+
+
+.about_work li{
+    position: relative;
+    margin-top: 20px;
+}
+
+.about_work ul::last-child{
+    padding: 30px 0;
+}
+
+.about_work i{
+    position: absolute;
+    left: -30px;
+    color:#f4b3dc;
+    font-size: 1.5em;
+}
+
+.grey{
+    background-color: #eee;
+}
+
+.price{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+}
+
+.price_item{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid #000;
+    padding: 20px;
+    height: 80vh;
+    margin: 0 20px;
+    justify-content: space-between;
+    text-align: center;
+    background-color: #fff;
+    box-shadow: 1px 2px 5px rgba(0, 0, 0, .7);
+    transition: all 0.6s ease;
+}
+
+.price_item:hover{
+    transform: scale(1.05);
+}
+
+.price_item li{
+    margin-left: -30px;
+    padding: 10px 0;
+}
+
+.price_item h3{
+    font-weight: bold;
+}
+
+.price_item h4{
+    color: #1ebee6;
+}
+
+.price_item a{
+    background-color: #ADE1F6;
+    padding: 10px 20px;
+    transition: all 0.6s ease;
+    display: block;
+    width: 60%;
+    margin: 0 auto;
+    border-radius: 10px;
+}
+
+.price_item a:hover,
+.price_item a:focus
+.price_item a:active{
+    color: #000;
+    border: none;
+    outline: none;
+    background-color: #f7c9e7;
+}
+
+@media(max-width: 1023px){
+    .price{
+        flex-direction: column;
+    }
+    
+    .price_item{
+        margin-bottom: 30px; 
+    }
+    
+}
+
+.dark{
+    background-color: #333;
+}
+
+.dark h2, .dark h3, .dark button{
+    color: #fff;
+}
+.dark .content_description h3:after{
+    background-color: #fff;
+}
+
+form{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 50px;
+}
+
+.forms input{
+    background-color: #fff;
+    padding: 10px 20px;
+    border: 2px solid #333;
+    outline: 1px solid #fff;
+}
+
+.forms button{
+    background-color: #91d7f3;
+    padding: 10px 30px;
+    color: #000;
+    border-radius: 10px;
+    transition: all 0.6s ease;
+}
+
+.forms button:hover,
+.forms button:focus{
+    background-color: #F4B3DC;
+    transform: scale(1.05);
+}
+
+@media(max-width: 1023px){
+    form{
+        flex-direction: column;
+    }
+    .forms input{
+        margin-bottom: 30px;
+    }
+}
+
+.blog_posts{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.single_post{
+    display: block;
+    border: 1px solid #000;
+    width: 30%;
+    height: 70vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: center;
+    padding: 30px 0;
+    text-shadow: 1px 1px 1px #fff;
+    transition: all 0.6s ease;
+    background-position: center;
+}
+
+.single_post:hover,
+.single_post:focus{
+    transform: scale(1.05);
+}
+
+.single_post:nth-child(1){
+    background: url(../img/blog2.jpeg) no-repeat;
+    background-size:cover;
+}
+
+.blog_posts .single_post:nth-child(2){
+    background: url(../img/blog1.jpg) no-repeat;
+    background-size:cover;
+}
+
+.single_post:nth-child(3){
+    background: url(../img/blog3.jpg) no-repeat;
+    background-size:cover;
+}
+
+.blog_posts>.single_post.white_text h3,
+.blog_posts>.single_post.white_text p{
+    color: #eee;
+    text-shadow: 1px 1px 1px #000;
+}
+
+.blog_posts>.single_post a{
+    display: block;
+    border: 1px solid #fff;
+    padding: 10px 20px;
+    background-color: rgba(0, 0, 0, .3);
+    width: 150px;
+    margin: 0 auto;
+    transition: all 0.6s ease;
+    color: #eee;
+    text-shadow: none;
+}
+
+.blog_posts>.single_post a:hover,
+.blog_posts>.single_post a:visited,
+.blog_posts>.single_post a:active,
+.blog_posts>.single_post a:focus{
+    color: #eee;
+    background-color: rgba(0, 0, 0, .5);
+}
+
+@media(max-width: 1023px){
+    .blog_posts{
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .single_post{
+        width: 80vw;
+        height: 60vw;
+        margin-bottom: 30px;
+    }
+}
+
+@media(max-width: 767px){
+    .blog_posts{
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .single_post{
+        width: 80vw;
+        height: 100vw;
+        margin-bottom: 30px;
     }
 }
