--- a/style/main.css
+++ b/style/main.css
@@ -7,6 +7,46 @@
     background-color: #f9d7ed;
 }
 
+.numbers{
+    font-family: 'Arial', sans-serif;
+}
+
+.ontop{
+    background-color: rgba(255, 255, 255, .5);
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    position: fixed;
+    z-index: 5;
+    line-height: 35px;
+    text-align: center;
+    font-size: 30px;
+    bottom: 30px;
+    right: 30px;
+    font-weight: lighter;
+    transition: all .6s ease;
+}
+
+.ontop:hover,
+.ontop:focus,
+.ontop:active{
+    transform: scale(1.2);
+    background-color: rgba(255, 255, 255, .7);
+}
+
+.ontop a:hover,
+.ontop a:focus,
+.ontop a:active{
+    transform: scale(1.2);
+}
+
+@media(max-width:1023px){
+    .ontop{
+        bottom: 70px;
+    }
+}
+
+
 a{
     color: #000;
     transition: all 0.6 ease;
@@ -35,7 +75,7 @@ header {
     top: 0;
     left: 0;
     z-index: 3;
-    background-color: #1ebee6;
+    background-color: #91d7f3;
 }
 
 header:before{
@@ -103,8 +143,13 @@ header__link{
     width: 150px;
     font-variant: small-caps;
     font-size: 1.2em;
-    
     z-index: 3;
+    transition: all .6s ease;
+}
+
+.register:hover,
+.register:focus{
+    transform: scale(1.05);
 }
 
 .header__burger {
@@ -274,8 +319,9 @@ header__link{
 }
 
 
+
 .content{
-    padding-bottom: 30px;
+    padding-bottom: 100px;
 }
 
 
@@ -338,6 +384,8 @@ header__link{
     border-radius: 50%;
     margin: 0 auto;
 }
+
+
 
 .about ul{
     text-align: center;
@@ -452,6 +500,10 @@ header__link{
 }
 
 @media(max-width: 1023px){
+    .content{
+        padding-bottom: 50px;
+    }
+    
     .price{
         flex-direction: column;
     }
@@ -480,6 +532,8 @@ form{
     margin-bottom: 50px;
 }
 
+
+
 .forms input{
     background-color: #fff;
     padding: 10px 20px;
@@ -492,12 +546,15 @@ form{
     padding: 10px 30px;
     color: #000;
     border-radius: 10px;
+    border: 2px solid #333;
+    outline: 2px solid #91d7f3;
     transition: all 0.6s ease;
 }
 
 .forms button:hover,
 .forms button:focus{
     background-color: #F4B3DC;
+    outline: 2px solid #F4B3DC;
     transform: scale(1.05);
 }
 
@@ -602,3 +659,321 @@ form{
         margin-bottom: 30px;
     }
 }
+
+
+.carousel{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    
+}
+
+.carousel_button{
+    position: absolute;
+    z-index: 2;
+    font-size: 5em;
+    background: none;
+    border: none;
+    top: 30%;
+    color: rgba(0, 0, 0, .5);
+    cursor: pointer;
+    border-radius: .25em;
+    padding: 0 .5em;
+    transition: all .6s ease;
+}
+
+.carousel_button:hover,
+.carousel_button:focus{
+    color: rgba(0, 0, 0, .8);
+    transform: scale(1.05);
+}
+
+.carousel_button.next{
+    right: 0;
+}
+
+.carousel_button.prev{
+    left: 0;
+}
+
+.slides{
+    position: relative;
+   display: block;
+    width: 80%;
+    height: 40vh; 
+    margin: 0 auto;
+    justify-content: space-between;
+}
+
+.slide{
+    display: flex;
+    position: absolute;
+    opacity: 0;
+    width: 100%;
+    height: inherit;
+    margin: 0 auto;
+    margin-left: -30px;
+    flex-direction: row;
+    padding: 45px 20px;
+    overflow: hidden;
+    transition: all .6s ease;
+}
+
+.slide[data-active]{
+    opacity: 1;
+    z-index: 1;
+}
+
+
+.slide img{
+    width: 200px;
+    height: 200px;
+    display: block;
+    border-radius: 50%;
+    object-fit: cover;
+    object-position: center;
+    margin-left: 75px;
+}
+
+.rew_content{
+    padding: 0 50px;
+    width: 70%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    }
+
+.rew_content h4{
+    font-size: 2em;
+}
+
+.rew_content p{
+    font-size: 1.3em;
+}
+
+@media(max-width: 1023px){
+    
+    
+    .carousel_button{
+        font-size: 3em;
+    }
+    
+    .slides{
+        width: 100%;
+        height: 30vh;
+    }
+    
+    .slide{
+        flex-direction: column;
+        text-align: center;
+        width: 100%;
+    }
+    
+    .rew_content{
+        padding: 0;
+    }
+
+    
+    .rew_content h4{
+        font-size: 1.5em;
+    }
+    
+    .rew_content p{
+        font-size: 1em;
+        padding: 10px 0;
+
+    }
+    
+    .slide img{
+        margin: 0 auto;
+        margin-bottom: 30px;
+        margin-top: -45px;
+        width: 150px;
+        height: 150px;
+    }
+    
+    
+}
+
+@media(max-width: 767px){
+    .slides{
+        width: 100%;
+        height: 60vh;
+    }
+}
+
+
+.social{
+    text-align: center;
+    font-size: 2em;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    
+}
+
+.social a{
+    padding: 0 20px;
+    color: #91d7f3;
+    transition: all .6s ease;
+}
+
+.social i{
+    color: #91d7f3;
+    transition: all .6s ease;
+}
+
+.social i:hover,
+.social i:focus,
+.social a:hover,
+.social a:focus,
+.social a:active{
+    color: #F4B3DC;
+    transform: scale(1.05);
+}
+
+
+.grey .forms form{
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    width: 50%;
+}
+
+.grey .forms input{
+    margin: 20px 0;
+    border: solid 1px #333;
+
+}
+
+.grey .forms button{
+    width: 30%;
+    margin: 20px auto;
+    background-color: #ADE1F6;
+    border: 2px solid #eee;
+    outline: 2px solid #ADE1F6;
+}
+
+.grey .forms button:hover,
+.grey .forms button:focus,
+.grey .forms button:active{
+    background-color: #f7c9e7;
+    outline: 2px solid #f7c9e7;
+}
+
+.grey .forms p{
+    font-variant: small-caps;
+    margin: 20px auto;
+    
+}
+
+
+@media(max-width: 1023px){
+    .grey .forms form{
+        flex-direction: column;
+        width: 100%;
+    }
+    .grey .forms input{
+        margin-bottom: 30px;
+    }
+}
+
+@media(max-width: 767px){
+    .grey .forms button{
+        width: 50%;
+    }
+    .grey .forms p{
+        text-align: center;
+    }
+}
+
+
+footer{
+    background: rgb(189,176,166);
+    background: linear-gradient(90deg, rgba(189,176,166,1) 0%, rgba(178,145,145,1) 100%);
+    padding-bottom: 20px;
+}
+
+.footer__menu_list{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-variant: small-caps;
+    padding-top: 30px;
+}
+
+.footer__menu_item{
+    transition: all .6s ease;
+}
+
+.footer__menu_item:hover,
+.footer__menu_item:focus,
+.footer__menu_item a:hover,
+.footer__menu_item a:focus{
+    color: #fff;
+    transform: scale(1.05);
+}
+
+.footer_content{
+    text-align: center; 
+    line-height: .5em;
+    margin-top: 30px;
+    font-variant: small-caps;
+
+}
+
+.footer_content p{
+    color: #888;
+}
+
+.footer_content .copyright{
+    text-align: right;
+    color: #666;
+    margin-top: -1.5em;
+    
+}
+
+.footer_content .copyright a{
+    transition: all .6s ease;
+    color: #333;
+}
+
+.footer_content .copyright a:hover,
+.footer_content .copyright a:focus{
+    transform: scale(1.05);
+    color: #fff;
+}
+
+@media(max-width: 1023px){
+    .footer__menu,
+    .footer__menu_list{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+    
+    .footer__menu_list{
+        margin-left: -30px;
+    }
+    
+    .footer_content{
+        text-align: left;
+        font-size: .7em;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    
+    .legal{
+        align-self: flex-start;
+    }
+    
+    .with_love{
+        align-self: flex-end;
+    }
+
+    
+}
+
+
