--- a/style/main.css
+++ b/style/main.css
@@ -977,3 +977,161 @@ footer{
 }
 
 
+
+
+
+/* page about */
+
+
+
+
+
+.page_content_description{
+    margin: 80px auto 100px auto;
+    text-align: center;
+    font-variant: small-caps;
+    line-height: .9em;
+    padding-top: 30px;
+}
+
+.page_content_description h1{
+    font-size: 3em;
+    letter-spacing: .1em;
+}
+
+
+
+.page_content_description h3{
+    font-size: 1.5em;
+    letter-spacing: .1em;
+    position: relative
+}
+
+.page_content_description h3:after{
+    content: '';
+    position: absolute;
+    width: 150px;
+    height: 1px;
+    display: block;
+    left: 50%;
+    margin: 30px 0 30px -75px;
+    background-color: #000;
+    
+}
+
+.page_content_article{
+   width: 100%; 
+    display: flex;
+    flex-direction: row;
+}
+
+.page_content_article.even{
+    flex-direction: row-reverse;
+}
+
+.page_content_article img{
+    width: 50%;
+    height: 89vh;
+    object-fit: cover;
+    
+}
+
+.page_content_article_text{
+    width: 50%;
+    background-color: #fff;
+    text-align: center;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.page_content_article_text h3{
+    font-variant: small-caps;
+    margin-bottom: 72px;
+    font-size: 2em;
+    position: relative;
+}
+
+.page_content_article_text h3:after{
+    content: '';
+    position: absolute;
+    width: 150px;
+    height: 1px;
+    display: block;
+    left: 50%;
+    margin: 20px 0 30px -75px;
+    background-color: #000;
+}
+
+
+.documents img{
+    height: 85vh;
+    display: block;
+    margin: 0 auto;
+}
+
+
+@media(max-width:1023px){
+    .page_content_description{
+       margin: 55px auto 100px auto; 
+    }
+}
+
+
+
+@media(max-width: 767px){
+    .page_content_description{
+       margin: 50px auto 100px auto; 
+    }
+    
+    .page_content_article,
+    .page_content_article.even{
+    flex-direction: column;
+    }
+    
+    .page_content_article img,
+    .page_content_article_text{
+        width: 100%;
+    }
+}
+
+
+
+.page_price{
+    padding-top: 100px;
+}
+
+
+.about_work img {
+    margin-right: 30px;
+    width: 38%;
+    height: 88vh;
+}
+
+
+.page_price_service_list{
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+@media(max-width:1023px){
+    .about_work img {
+    object-position: left center;
+    }
+    
+    .page_price_service_list{
+    padding: 0;
+    margin-top: -20px;
+    }
+}
+
+@media(max-width: 767px){
+    .about_work img{
+    object-position: left center;
+    width: 100%;
+        margin-bottom: 30px;
+    }
+}
