--- a/style/main.css
+++ b/style/main.css
@@ -568,15 +568,15 @@ form{
 }
 
 .blog_posts{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 50px;
 }
 
 .single_post{
     display: block;
     border: 1px solid #000;
-    width: 30%;
+    width: 100%;
     height: 70vh;
     display: flex;
     flex-direction: column;
@@ -1135,3 +1135,77 @@ footer{
         margin-bottom: 30px;
     }
 }
+
+.blog_navigation{
+    margin-top: 60px;
+    text-align: center;
+}
+
+
+
+.blog_navigation a{
+    display: inline-block;
+    margin: 0 5px;
+    border: 1px solid #fff;
+    background-color: rgba(0, 0, 0, .3);
+    width: 30px;
+    height: 30px;
+    transition: all 0.6s ease;
+    color: #eee;
+    border-radius: 50%;
+}
+
+.blog_navigation a:hover,
+.blog_navigation a:visited,
+.blog_navigation a:active,
+.blog_navigation a:focus{
+    color: #eee;
+    background-color: rgba(0, 0, 0, .5);}
+    
+
+#four{
+    background: url(../img/blog5.jpg) no-repeat;
+    background-size:cover;
+}
+
+#five{
+   background: url(../img/blog4.jpg) no-repeat;
+    background-size:cover; 
+}
+
+#six{
+    background: url(../img/blog7.jpg) no-repeat;
+    background-size:cover;
+}
+
+#seven{
+    background: url(../img/blog6.jpg) no-repeat;
+    background-size:cover;
+    background-position: center center;
+}
+
+#eight{
+    background: url(../img/blog8.jpg) no-repeat;
+    background-size:cover;
+}
+
+#nine{
+    background: url(../img/blog10.jpg) no-repeat;
+    background-size:cover;
+    background-position: 25% center;
+}
+
+
+@media(max-width: 1023px){
+    .blog_posts{
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+
+
+@media(max-width: 767px){
+    .blog_posts
+}
+
